--- a/example/storybook/src/api/DescendantsStyles/index.stories.mdx
+++ b/example/storybook/src/api/DescendantsStyles/index.stories.mdx
@@ -4,9 +4,9 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 import { CodeBlock, AppProvider } from '@gluestack/design-system';
 
-# Descendants (Context based)
+# Descendant Styling (Context based)
 
-We can define descendants in `baseStyle` object where we can define styles that are passed down to children using context-based styling. This approach allows for the global styling of a component to be managed in a centralized location, rather than having to pass down props.
+We can define descendants styles in **componentStyleConfig** Object inside the component name prop starting with and underscore, where we can define styles that are passed down to children using context-based styling. This approach allows for the global styling of a component to be managed in a centralized location, rather than having to pass down props.
 
 We can create any key in the descendants object and pass style as a value, to use this we need to specify the created key in the descendantStyle array that is defined in a component config which is passed as third parameter in the styled function.
 
@@ -15,38 +15,36 @@ We can create any key in the descendants object and pass style as a value, to us
     code={`const StyledButton = styled(
   Pressable,
   {
-    baseStyle: {
-      style: {
-        bg: '$primary600',
-        px: '$6',
-        py: '$4',
-      },
-      descendants: {
-        _text: {
-          style: {
-            color: '$white',
-          },
-        },
-      },
+    bg: '$primary600',
+    px: '$6',
+    py: '$4',
+    _text: {
+      color: '$white',
     },
   },
   {
-    descendantStyle: ['_text'],
+  descendantStyle: ['_text'],
   }
 );`}
-  />
+/>
+
 </AppProvider>
 
 To apply the passed style to a given child we need to specify the key in the ancestor styles array of the component config, while creating the component.
 
-```jsx
+<AppProvider>
+  <CodeBlock
+    code={`
 const StyledButtonText = styled(
   Text,
   {
-    baseStyle: { style: { color: '$red800', fontWeight: '700' } },
+    color: '$grey800',
+    fontWeight: '700',
   },
   { ancestorStyle: ['_text'] }
 );
-```
+`}
+  />
+</AppProvider>
 
 These style will automatically be applied to children.
