--- a/example/storybook/src/api/Variants/index.stories.mdx
+++ b/example/storybook/src/api/Variants/index.stories.mdx
@@ -10,32 +10,28 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 - Adding a variant
 
   - You can add a new variant by passing `variants` key in `styled`. There are no restrictions on the number of variations that may be incorporated.
+  - A variant accepts the same style object as the sx style.
 
-  ```jsx
-  const StyledButtonVariant = styled(Pressable, {
+    ```jsx
+    const StyledButtonVariant = styled(Pressable, {
       p: '$3',
-    },
-    variants: {
-      variant: {
-        solid: {
-          bg: '$primary600',
+      variants: {
+        variant: {
+          solid: {
+            bg: '$primary600',
+          },
         },
-      }
-    },
-  });
+      },
+    });
+
     () => <StyledButtonVariant variant="solid">Button</StyledButtonVariant>;
-
-  ```
-
-  - A variant accepts the same style object as the base style.
-    .
+    ```
 
 - Multiple variants
 
   ```jsx
   const StyledButtonVariant = styled(Pressable, {
-      p: '$3',
-    },
+    p: '$3',
     variants: {
       variant: {
         solid: {
@@ -53,73 +49,52 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
         sm: {
           px: '$3',
           py: '$2',
-        }
-      }
+        },
+      },
     },
   });
 
-  () => <StyledButtonVariant variant="solid" size="sm">Button</StyledButtonVariant>;
-
+  () => (
+    <StyledButtonVariant variant="solid" size="sm">
+      Button
+    </StyledButtonVariant>
+  );
   ```
 
 - Boolean variants
 
   ```jsx
   const StyledButtonVariant = styled(Pressable, {
-      p: '$3',
-    },
-    variants: {
-      variant: {
-        solid: {
-            bg: '$primary600',
-        },
-      },
-      outlined: {
-        borderColor: '$lightgray200',
-
-      }
-
-    },
-  });
-
-  () => <StyledButtonVariant variant="solid" outlined>Button</StyledButtonVariant>;
-
-  ```
-
-- Default variants
-
-  - You can pass the **`variant`** prop in the **`defaultProps`** property when defining the component to set a variant as the default.
-
-  ```jsx
-  const StyledButtonVariant = styled(Pressable, {
-    baseStyle: {
-      p: '$3',
-    },
+    p: '$3',
     variants: {
       variant: {
         solid: {
           bg: '$primary600',
         },
-        subtle: {
-          bg: '$primary200',
+      },
+      outlined: {
+        true: {
+          borderColor: '$lightgray200',
         },
       },
     },
-    defaultProps: {
-      variant: 'solid',
-    },
   });
-  () => <StyledButtonVariant>Button</StyledButtonVariant>;
+
+  () => (
+    <StyledButtonVariant variant="solid" outlined>
+      Button
+    </StyledButtonVariant>
+  );
   ```
 
 - Compound variants
 
   - The compoundVariants feature allows you to set styles for a variant based on a combination of other variants. This means that you can specify different styles for a variant depending on the values of other variants that are being used.
+  - compoundVariants is an array of objects that contain a `value` key and variants. The `value` key accepts the same style object as the sx style.
 
   ```jsx
   const StyledButtonVariant = styled(Pressable, {
-      p: '$3',
-    },
+    p: '$3',
     variants: {
       variant: {
         solid: {
@@ -137,23 +112,26 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
         sm: {
           px: '$3',
           py: '$2',
-        }
-      }
+        },
+      },
     },
     compoundVariants: [
       {
         variant: 'solid',
         size: 'sm',
-         value: {
+        value: {
           'borderWidth': 2,
           ':hover': {
             bg: '$blue400',
           },
         },
-      }
-    ]
+      },
+    ],
   });
 
-  () => <StyledButtonVariant variant='solid' size='sm'>Button</StyledButtonVariant>;
-
+  () => (
+    <StyledButtonVariant variant="solid" size="sm">
+      Button
+    </StyledButtonVariant>
+  );
   ```
