--- a/example/storybook/src/api/DescendantsStyles/index.stories.mdx
+++ b/example/storybook/src/api/DescendantsStyles/index.stories.mdx
@@ -2,17 +2,14 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="api/Descendants Styles" />
 
-import { CodeBlock, AppProvider } from '@gluestack/design-system';
-
 # Descendant Styling (Context based)
 
 We can define descendants styles in **componentStyleConfig** Object inside the component name prop starting with and underscore, where we can define styles that are passed down to children using context-based styling. This approach allows for the global styling of a component to be managed in a centralized location, rather than having to pass down props.
 
 We can create any key in the descendants object and pass style as a value, to use this we need to specify the created key in the descendantStyle array that is defined in a component config which is passed as third parameter in the styled function.
 
-<AppProvider>
-  <CodeBlock
-    code={`const StyledButton = styled(
+```jsx
+const StyledButton = styled(
   Pressable,
   {
     bg: '$primary600',
@@ -23,18 +20,14 @@ We can create any key in the descendants object and pass style as a value, to us
     },
   },
   {
-  descendantStyle: ['_text'],
+    descendantStyle: ['_text'],
   }
-);`}
-/>
-
-</AppProvider>
+);
+```
 
 To apply the passed style to a given child we need to specify the key in the ancestor styles array of the component config, while creating the component.
 
-<AppProvider>
-  <CodeBlock
-    code={`
+```jsx
 const StyledButtonText = styled(
   Text,
   {
@@ -43,8 +36,6 @@ const StyledButtonText = styled(
   },
   { ancestorStyle: ['_text'] }
 );
-`}
-  />
-</AppProvider>
+```
 
 These style will automatically be applied to children.
