--- a/example/storybook/src/getting-started/StyledProvider/index.stories.mdx
+++ b/example/storybook/src/getting-started/StyledProvider/index.stories.mdx
@@ -38,3 +38,58 @@ const App = () => (
 - In this example, the **`StyledProvider`** component is used to set the breakpoints and theme for the entire application, and the **`config`** prop is passed with the configuration options.
 - It's important to note that the **`StyledProvider`** needs to be placed at the top level of your application, so that it can provide the config to all the other components that use the library.
 - Once you have wrapped your application with the **`StyledProvider`**, you will be able to use the breakpoints, theme and other configs throughout your application.
+
+### ColorMode
+
+To switch between color modes, the UI library may provide a toggle button or some other mechanism that can be used to change the color mode. When the color mode is changed, the library updates the colors used throughout the interface to match the new mode.
+
+To implement this the `StyledProvider` accepts a `colorMode` prop. Just handle your colorMode and pass your current colorMode in this prop and all your components will start reacting to your colorMode changes.
+
+```jsx
+import React from 'react';
+import { View, Pressable, Text } from 'react-native';
+import { styled, StyledProvider } from '@dank-style/react';
+import { config } from './dank.config';
+const StyledComponent = styled(
+  View,
+  {
+    baseStyle: {
+      style: {
+        bg: '$red500',
+      },
+      colorMode: {
+        dark: {
+          style: {
+            bg: '$info600',
+          },
+        },
+      },
+    },
+  },
+  {}
+);
+
+export function ColorMode({ ...args }) {
+  const [currentColorMode, setCurrentColorMode] = React.useState('light');
+
+  return (
+    <StyledProvider config={config} colorMode={currentColorMode}>
+      <Pressable
+        style={{
+          backgroundColor: 'gray',
+          padding: 12,
+          marginBottom: 12,
+        }}
+        onPress={() => {
+          setCurrentColorMode(currentColorMode === 'dark' ? 'light' : 'dark');
+        }}
+      >
+        <Text style={{ color: 'white' }}>
+          Toggle {currentColorMode === 'dark' ? 'light' : 'dark'}
+        </Text>
+      </Pressable>
+      <StyledComponent />
+    </StyledProvider>
+  );
+}
+```
