--- a/example/storybook/src/overview/API/index.stories.mdx
+++ b/example/storybook/src/overview/API/index.stories.mdx
@@ -2,18 +2,14 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="Overview/API" />
 
-import { AppProvider, CodeBlock } from '@gluestack/design-system';
-
 # API
 
 ## `styled`
 
 With our **`styled`** function, you can easily extend existing components and make them customizable and themeable.
 
-<AppProvider>
-  <CodeBlock
-    language="tsx"
-    code={`const StyledCard = styled(
+```tsx
+const StyledCard = styled(
   View,
   {
     p: '$3',
@@ -25,9 +21,8 @@ With our **`styled`** function, you can easily extend existing components and ma
   },
   componentConfig,
   extenedBaseConfig
-);`}
-  />
-</AppProvider>
+);
+```
 
 ## componentConfig
 
