fix: config path

--- a/example/storybook/src/api/DescendantsStyles/index.stories.mdx
+++ b/example/storybook/src/api/DescendantsStyles/index.stories.mdx
@@ -5,7 +5,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 import { styled, StyledProvider } from '@dank-style/react';
 import { Pressable, Text } from 'react-native';
 import { Button, AppProvider, CodePreview } from '@gluestack/design-system';
-import { config } from '../../../nb.config.ts';
+import { config } from '../../components/nb.config';
 
 # Descendant Styling (Context based)
 
